--- a/advertisement_management/src/main/resources/templates/edit.html
+++ b/advertisement_management/src/main/resources/templates/edit.html
@@ -43,8 +43,18 @@
                                 <input type="file" class="form-control-file" id="adImage" name="adImages" accept="image/*" multiple required>
                             </div>
                             <div class="form-group">
-                                <label for="adFeature">特色描述</label>
+                                <label for="adFeature">广告简介</label>
                                 <input type="text" class="form-control" id="adFeature" name="adFeature" placeholder="输入特色描述" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="keywords">标签</label>
+                                <input type="text" class="form-control" id="keywords" name="keywords" placeholder="输入广告标签" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="adStartTime">投放日期</label>
+                                <input id="adStartTime" type="text" class="form-control" name="adStartTime" value="2015-11-11">
+                                <span id="zhi" class="form-control">至</span>
+                                <input id="adEndTime" type="text" class="form-control" name="adEndTime" value="2015-11-17">
                             </div>
                         </form>
 
