--- a/news/src/main/webapp/style/mainPage.css
+++ b/news/src/main/webapp/style/mainPage.css
@@ -78,11 +78,6 @@
     transition: transform 0.3s;
     padding: 10px;
 }
-.thumbnail img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 .thumbnail:hover {
     transform: translateY(-5px);
 }
@@ -96,26 +91,31 @@
     background-color: #f4f4f4;
     margin: 0;
 }
-.featured-image {
+.featured {
     width: 70%;
     height: 100%;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     flex-grow: 1;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     overflow: hidden;
     text-align: center;
     transition: transform 0.3s;
 }
-.featured-image:hover{
+.featured:hover {
     transform: scale(101%);
 }
-.featured-image img {
+.featured-image {
     width: calc(100% - 20px);
-    height: calc(90% - 20px);
+    max-height: calc(90% - 20px);
     padding: 10px;
-    display: block;
+    overflow: hidden;
 }
-.featured-image h2 {
+.featured-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.featured-content h2 {
     padding: 10px;
     height: 10%;
     text-align: center;
