--- a/news/src/main/webapp/style/mainPage.css
+++ b/news/src/main/webapp/style/mainPage.css
@@ -122,7 +122,7 @@
     background-color: #f4f4f4;
     margin: 0;
 }
-.select-class-list {
+.select-zone-list {
     display: flex;
     justify-content: left;
     gap: 10px;
@@ -130,7 +130,7 @@
     flex-wrap: wrap;
     margin-top: 20px;
 }
-.select button {
+.zone button {
     padding: 10px 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -138,7 +138,7 @@
     cursor: pointer;
     transition: background-color 0.3s;
 }
-.select button:hover {
+.zone button:hover {
     background-color: #e9ecef;
 }
 .more-news-list {
