--- a/advertisement_management/src/main/resources/templates/index.html
+++ b/advertisement_management/src/main/resources/templates/index.html
@@ -59,8 +59,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Earnings (Monthly)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                                                总广告数</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800" th:text="${totalNum}"></div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -77,8 +77,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Earnings (Annual)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                                                总访问量</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800" th:text = "${totalVisit}"></div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
