--- a/news/src/main/webapp/style/detailPage.css
+++ b/news/src/main/webapp/style/detailPage.css
@@ -53,10 +53,10 @@
 
 }
 
-.news-author{
+#news-author{
 }
 
-.news-date{
+#news-date{
     color: #777777;
 }
 
@@ -66,7 +66,7 @@
     flex-direction: column;
 }
 
-.news-image {
+#news-cover {
     width: 100%;
     height: 100%;
     overflow: hidden;
