--- a/advertisement_management/src/main/resources/templates/edit.html
+++ b/advertisement_management/src/main/resources/templates/edit.html
@@ -18,6 +18,9 @@
 <!-- Page Wrapper -->
 <div id="wrapper">
 
+    <!-- Sidebar -->
+    <div th:replace="sidebar.html :: sidebar"></div>
+
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
 
