--- a/advertisement_management/src/main/resources/templates/updateAdDetails.html
+++ b/advertisement_management/src/main/resources/templates/updateAdDetails.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
-    <title>广告创建</title>
+    <title>广告更新</title>
     <!-- Bootstrap CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom fonts for this template -->
