--- a/news/src/main/webapp/style/registerPage.css
+++ b/news/src/main/webapp/style/registerPage.css
@@ -105,3 +105,6 @@ input[type="date"] {
     background-position: right 10px center;
     background-size: 15px 15px;
 }
+.btn-login{
+    display: none;
+}
