fix: fix the adv create problem

--- a/advertisement_management/src/main/resources/templates/index.html
+++ b/advertisement_management/src/main/resources/templates/index.html
@@ -94,19 +94,10 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tasks
+                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">用户数
                                             </div>
                                             <div class="row no-gutters align-items-center">
-                                                <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
-                                                </div>
-                                                <div class="col">
-                                                    <div class="progress progress-sm mr-2">
-                                                        <div class="progress-bar bg-info" role="progressbar"
-                                                            style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                                            aria-valuemax="100"></div>
-                                                    </div>
-                                                </div>
+                                                <div class="h5 mb-0 font-weight-bold text-gray-800" th:text = "${userNum}"></div>
                                             </div>
                                         </div>
                                         <div class="col-auto">
@@ -124,8 +115,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                Pending Requests</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
+                                                管理员个数</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800" th:text = "${adminNum}"></div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -146,20 +137,20 @@
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                     <h6 class="m-0 font-weight-bold text-primary">近十天广告创建量</h6>
-                                    <div class="dropdown no-arrow">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenu"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                            aria-labelledby="dropdownMenuLink">
-                                            <div class="dropdown-header">Dropdown Header:</div>
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
-                                    </div>
+<!--                                    <div class="dropdown no-arrow">-->
+<!--                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenu"-->
+<!--                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--                                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>-->
+<!--                                        </a>-->
+<!--                                        <div class="dropdown-menu dropdown-menu-right shadow animated&#45;&#45;fade-in"-->
+<!--                                            aria-labelledby="dropdownMenuLink">-->
+<!--                                            <div class="dropdown-header">Dropdown Header:</div>-->
+<!--                                            <a class="dropdown-item" href="#">Action</a>-->
+<!--                                            <a class="dropdown-item" href="#">Another action</a>-->
+<!--                                            <div class="dropdown-divider"></div>-->
+<!--                                            <a class="dropdown-item" href="#">Something else here</a>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
@@ -185,8 +176,7 @@
                                         <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
                                             aria-labelledby="dropdownMenuLink">
                                             <div class="dropdown-header">请选择:</div>
-                                            <a class="dropdown-item" href="#">查看广告列表</a>
-                                            <a class="dropdown-item" href="#">导出报告</a>
+                                            <a class="dropdown-item" th:href="@{/home/advertisements}">查看广告列表</a>
                                         </div>
                                     </div>
                                 </div>
