--- a/advertisement_management/src/main/resources/templates/edit.html
+++ b/advertisement_management/src/main/resources/templates/edit.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <title>广告创建</title>
-    <!-- Bootstrap CSS -->
-    <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom fonts for this template -->
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>广告</title>
+
+    <!-- Custom fonts for this template-->
     <link href="../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <!-- Custom styles for this template -->
+    <link
+            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+            rel="stylesheet">
+
+    <!-- Custom styles for this template-->
     <link href="../static/css/sb-admin-2.min.css" rel="stylesheet">
     <!-- Editor.md CSS -->
     <link rel="stylesheet" href="/static/css/editormd.css" />
     <link rel="shortcut icon" href="https://pandao.github.io/editor.md/favicon.ico" type="image/x-icon" />
+
 </head>
 <body id="page-top">
 
@@ -24,6 +35,7 @@
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
 
+        <div th:replace="topbar.html :: topbar"></div>
         <!-- Main Content -->
         <div id="main-content">
 
@@ -139,11 +151,18 @@
                                     method: 'POST',
                                     body: adFormData
                                 })
-                                    .then(response => response.json())
+                                    .then(
+                                        response => {
+                                            response.json()
+                                            alert("发布成功")
+                                            window.location.href = "/home/advertisements";
+                                        }
+                                    )
                                     .then(adData => {
                                         console.log('Ad created:', adData);
                                     })
                                     .catch(error => {
+                                        alert("发布失败")
                                         console.error('Error creating ad:', error);
                                     });
                             }
