--- a/advertisement_management/src/main/resources/templates/updateAd.html
+++ b/advertisement_management/src/main/resources/templates/updateAd.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>广告管理系统</title>
-  <link rel="stylesheet" href="/static/css/advertisement.css">
-  <!-- 引入Bootstrap和自定义CSS -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="/static/css/sb-admin-2.min.css" rel="stylesheet">
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>广告</title>
+
+  <!-- Custom fonts for this template-->
+  <link href="../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link
+          href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
+
+  <!-- Custom styles for this template-->
+  <link href="../static/css/sb-admin-2.min.css" rel="stylesheet">
+
 </head>
 <body id="page-top">
 
@@ -25,7 +36,7 @@
     <div id="content">
 
       <!-- Topbar (这里假设已经包含在你的HTML中或通过其他方式加载) -->
-      <!-- <div th:replace="topbar.html :: topbar"></div> -->
+       <div th:replace="topbar.html :: topbar"></div>
 
       <!-- Begin Page Content -->
       <div class="container-fluid">
