--- a/advertisement_management/src/main/resources/templates/sidebar.html
+++ b/advertisement_management/src/main/resources/templates/sidebar.html
@@ -73,9 +73,9 @@
       <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
 <!--          <h6 class="collapse-header">Login Screens:</h6>-->
-          <a class="collapse-item" href="advertisements">广告列表</a>
-          <a class="collapse-item" href="markdown">新增广告</a>
-          <a class="collapse-item" href="article">编辑广告</a>
+          <a class="collapse-item" th:href="@{/home/advertisements}">广告列表</a>
+          <a class="collapse-item" th:href="@{/home/markdown}">新增广告</a>
+          <a class="collapse-item" th:href="@{/home/article}">编辑广告</a>
 <!--          <div class="collapse-divider"></div>-->
         </div>
       </div>
